--- a/card-perfume/css/style.css
+++ b/card-perfume/css/style.css
@@ -12,8 +12,11 @@
     body{
         background-color: hsl(30, 38%, 92%);
         display: flex;
-        align-items: center;
-        justify-content: center;         
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;        
         width: 100vw;
         height: 100vh;
     }
