--- a/card-perfume/css/style.css
+++ b/card-perfume/css/style.css
@@ -11,7 +11,6 @@
 @media screen and (min-width: 200px) and (max-width: 1200px) {
     body{
         background-color: hsl(30, 38%, 92%);
-        display: flex;
         position: relative;
         display: flex;
         flex-direction: column;
@@ -34,8 +33,8 @@
     .section-img{
         background: white url(../images/image-product-mobile.jpg);
         background-size: cover;
-        width: 360px;
-        height: 270px;
+        width: 20rem;
+        height: 16rem;
         border-radius: 10px 10px 0px 0px;    
     }
 
@@ -44,8 +43,8 @@
         align-items: center;
         background-color: white;
         border-radius: 0px 0px 10px 10px;
-        width: 360px;
-        height: 430px;
+        width: 20rem;
+        height: 29rem;
         padding: 18px;  
     }
 
@@ -90,13 +89,13 @@
     }
     
     .button{
-        padding-left: 15px;
+        
         padding-top: 20px;
         width: 70px;
     }
     
     button{
-        width: 290px;
+        width: 280px;
         height: 50px;
         border-radius: 9px;
         font-size: 18px;
