--- a/landing-page/css/style.css
+++ b/landing-page/css/style.css
@@ -10,56 +10,62 @@
 @media screen and (min-width:370px) and (max-width: 900px) {
       
 body{
-    background-color:  hsl(257, 40%, 49%);
-    background-image: url(../images/bg-desktop.svg);
-    background-repeat: repeat;
-    height: 100vh;
-    width: 100vw;
+    height:100vh;
+    width:100vw;
+    background-color:hsl(257, 40%, 49%);
+    background-image: url(../images/bg-mobile.svg);
+    background-repeat: no-repeat;
+    background-position: top;
 }
 
 main{
-    display: flex;
     flex-direction: column;
+    height: 100vh;
+    display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+}
+
+.bloco{
+    flex-direction: column;
+    display: flex;
+    margin: 0;
+    justify-content: space-evenly;
+}
+
+.block1{
+    display: flex;
+    padding-top: 1rem;
     
 }
 
-
 .logo{
-    width: 8rem;   
-    margin-right: 190px;
-    padding-bottom: 150px;
+    width: 7rem;
+}
 
+.block2{
+    
 }
 
 .imagem{
-    width: 20rem;
-
-}
-
-.text{
-    padding-top: 40px;
-    width: 20rem;
-    height: 20rem;
-    color: white;
-    font-family: 'Poppins';
-    text-align: center;
+    width: 18.7rem;
 }
 
 .title{
-   
-    
+    text-align: center;
+    color: white;
+    font-family: 'Poppins';
+    font-weight: 600;
+    padding-top: 5rem ;    
 }
 
-.icones{
-    
+.description{
+    text-align: center;
+    color: white;
+    font-family: 'Poppins';
+    font-weight: 400;
 }
 
 
+
 }
-
-
-
-
