--- a/landing-page/css/style.css
+++ b/landing-page/css/style.css
@@ -7,7 +7,7 @@
     
 }
 
-@media screen and (min-width:370px) and (max-width: 900px) {
+@media screen and (min-width:370px) and (max-width: 500px) {
       
 body{
     height:100vh;
@@ -122,5 +122,74 @@ button:hover{
     border: 1px solid white;
     border-radius: 50%;
 }
+
+}
+
+@media screen and (min-width:501px) and (max-width: 2000px){
+body{
+    background-color: hsl(257, 40%, 49%);
+    background-image: url(../images/bg-desktop.svg);
+    background-size:cover;   
+}
+
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position:relative;        
+}
+
+.cabecalho{
+    display: flex;
+    margin-top: 3rem;
+    margin-left: 5.4rem;
+}
+
+.logo{
+    width: 10rem;
+}
+
+.imagem{
+    width: 650px;
+    margin-top: 105px;
+    margin-left: 30px;
+}
+
+.text{
+    margin-left: px;
+    margin-top: 26px;
+}
+
+.title{
+    color: white;
+    font-family: 'Poppins';
+    font-weight: 600;
+    font-size: 35px;
+    
+}
+
+.description{
+    color: white;
+    font-family: 'Poppins';
+    margin-top: 20px;
+}
+
+.register{
+    padding-top: 25px;
+    display: flex
+    
+}
+
+button{
+    width: 12rem;
+    height: 2.5rem;
+    font-family: 'Poppins';
+    font-size: 16px;
+    color: hsl(257, 40%, 49%);
+    border-radius: 2rem;
+    border: none;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.486);
+}
+
 
 }
