--- a/landing-page/css/style.css
+++ b/landing-page/css/style.css
@@ -125,11 +125,13 @@ button:hover{
 
 }
 
-@media screen and (min-width:501px) and (max-width: 2000px){
+@media screen and (min-width:501px){
 body{
     background-color: hsl(257, 40%, 49%);
     background-image: url(../images/bg-desktop.svg);
-    background-size:cover;   
+    background-size:cover;
+    background-repeat: no-repeat;
+       
 }
 
 main{
