--- a/landing-page/css/style.css
+++ b/landing-page/css/style.css
@@ -7,7 +7,7 @@
     
 }
 
-@media screen and (min-width:370px) and (max-width: 500px) {
+@media screen and (min-width:370px) and (max-width: 767px) {
       
 body{
     height:100vh;
@@ -24,6 +24,7 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 
@@ -40,6 +41,7 @@ main{
 }
 
 .imagem{
+    margin-left: 3rem;
     width: 18.7rem;
     margin-top: 0.3rem;   
 }
@@ -125,26 +127,156 @@ button:hover{
 
 }
 
-@media screen and (min-width:501px){
+@media screen and (min-width:767px) and (max-width: 1023px) {
+      
+    body{
+        height:100vh;
+        width:100vw;
+        background-color:hsl(257, 40%, 49%);
+        background-image: url(../images/bg-mobile.svg);
+        background-repeat: no-repeat;
+        background-position: top;
+        background-size: contain;
+    }
+    
+    
+    .father{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    position: relative;
+    transform: translate(0%, 37%);
+    
+    }
+    
+    .cabecalho{
+        display: flex;
+        padding-left: 10rem;
+        position: relative;
+        transform: translate(0%, 360%); 
+    
+    }
+    .logo{
+        width: 9rem;      
+    }
+    
+    .imagem{
+        width: 30rem;
+          
+    }
+    
+    .title{
+        margin: 0 1rem 0 1rem;
+        text-align: center;
+        color: white;
+        font-family: 'Poppins';
+        font-weight: 600;
+        padding-top: 1rem ; 
+        padding-bottom: 1rem;
+        font-size: 34px;   
+    }
+    
+    .description{
+        margin: 0 1rem 0 1rem;
+        text-align: center;
+        color: white;
+        font-family: 'Poppins';
+        font-weight: 400;
+        font-size: 24px;
+        padding-top: 0.5rem;
+    }
+    
+    .register{
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        margin-top: 1.5rem;
+    }
+    
+    button{
+        width: 14rem;
+        height: 2.5rem;
+        font-family: 'Poppins';
+        color: hsl(257, 40%, 49%);
+        border-radius: 2rem;
+        border: none;
+    }
+    
+    button:hover{
+        background-color: hsl(300, 69%, 71%);
+    }
+    
+    footer{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        position: relative;
+        transform: translate(0%, 300%);
+    }
+
+    .icon{
+        display: flex;
+        justify-content: center;
+        padding-top: 3rem;
+        color: white;
+    }
+    
+    .instagram{
+        width: 2rem;
+        height: 2rem;
+        padding-top: 0.4rem;
+        padding-left: 0.5rem ;
+        border: 1px solid white;
+        border-radius: 50%;
+    }
+    
+    .facebook{
+        margin-right: 2rem ;
+        margin-left: 2rem;
+        width: 2rem;
+        height: 2rem;
+        padding-top: 0.4rem;
+        padding-left: 0.6rem;
+        border: 1px solid white;
+        border-radius: 50%;
+    }
+    
+    .twitter{
+        width: 2rem;
+        height: 2rem;
+        padding-top: 0.4rem;
+        padding-left: 0.5rem ;
+        border: 1px solid white;
+        border-radius: 50%;
+    }
+    
+    }
+
+@media screen and (min-width:1024px){
 body{
     background-color: hsl(257, 40%, 49%);
     background-image: url(../images/bg-desktop.svg);
-    background-size:cover;
-    background-repeat: no-repeat;
-       
+    background-size:contain;
+    background-repeat: no-repeat; 
+    height: 100vh;
+    width: 100vw;
 }
 
-main{
+
+
+.father{
     display: flex;
-    justify-content: center;
     align-items: center;
-    position:relative;        
+    justify-content: space-around;
+    position: relative;
+    transform: translate(0%, 6%);
 }
 
 .cabecalho{
-    display: flex;
-    margin-top: 3rem;
-    margin-left: 5.4rem;
+    
 }
 
 .logo{
@@ -152,32 +284,33 @@ main{
 }
 
 .imagem{
-    width: 650px;
-    margin-top: 105px;
-    margin-left: 30px;
+    width: 630px;
+    margin-top: 78px;
+    
 }
 
 .text{
-    margin-left: px;
-    margin-top: 26px;
+    margin-right: 90px;
+    margin-bottom: 40px;
 }
 
 .title{
     color: white;
     font-family: 'Poppins';
     font-weight: 600;
-    font-size: 35px;
+    font-size: 37px;
+    
     
 }
 
 .description{
     color: white;
     font-family: 'Poppins';
-    margin-top: 20px;
+    margin-top: 20px;   
 }
 
 .register{
-    padding-top: 25px;
+    padding-top: 20px;
     display: flex
     
 }
@@ -193,5 +326,54 @@ button{
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.486);
 }
 
+button:hover{
+    background-color: hsl(300, 69%, 71%);
+}
+
+footer{
+    display: flex;
+    flex-direction: row;
+    align-items: end;
+    justify-content: end;
+    color: white;
+    margin-right: 130px ;
+}
+
+.icon{
+    display: flex;
+    flex-direction: row;
+}
+
+.instagram{
+    
+    width: 2rem;
+    height: 2rem;
+    padding-top: 0.4rem;
+    padding-left: 0.5rem ;
+    border: 1px solid white;
+    border-radius: 50%;
+}
+
+.facebook{
+    margin-right: 15px ;
+    margin-left: 15px;
+    width: 2rem;
+    height: 2rem;
+    padding-top: 0.4rem;
+    padding-left: 0.6rem;
+    border: 1px solid white;
+    border-radius: 50%;
+}
+
+.twitter{
+    width: 2rem;
+    height: 2rem;
+    padding-top: 0.4rem;
+    padding-left: 0.5rem ;
+    border: 1px solid white;
+    border-radius: 50%;
+}
 
 }
+
+
