--- a/social-section/css/style.css
+++ b/social-section/css/style.css
@@ -172,7 +172,181 @@ main{
 
 @media (min-width: 1024px) {
 
-.body{
-     
-}
+    .body{
+        height: 100vh;
+        width: 100vw;
+        background: url(../images/bg-pattern-top-desktop.svg);
+        background-size: cover ;
+        background-repeat: no-repeat;
+       
+    }
+    
+    .begin{
+        display: grid;
+        row-gap: 30px;
+        width: 500px;
+        margin-left: 40px;
+        font-family: 'League Spartan';
+    }
+    
+    
+    .title{
+        width: 280px;
+        margin-top: 40px;
+        font-weight: 700;
+        font-size: 2.7rem;
+        color: hsl(300, 43%, 22%);
+    }
+    
+    .paragraph{
+        font-size: 1.29rem;
+        font-weight: 500;
+        color: hsl(303, 10%, 53%);
+    }
+    
+    .second{
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        transform: translate(130%, -103%);
+        width: 500px;
+    
+    }
+    
+    .stars{
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+    
+    .star2{
+        padding-right: 0.3rem;
+        padding-left: 0.3rem;
+    }
+    
+    .star3{
+       padding-right: 0.2rem;
+       padding-left: 0.2rem;
+    }
+    
+    .star4{
+        padding-right: 0.3rem;
+        padding-left: 0.3rem;
+    }
+    
+    .review{
+        font-family: 'League Spartan';
+        font-weight: 700;
+        display: flex;
+        align-items: center;
+        margin-top: 1rem;
+        color: hsl(300, 43%, 22%);
+        background-color:  hsl(300, 24%, 96%);
+        padding: 0.7rem;
+        width: 460px;
+        height: 50px;
+        border-radius: 10px;
+        font-size: 1rem;
+    }
+    
+    .guru{
+        font-family: 'League Spartan';
+        font-weight: 700;
+        display: flex;
+        align-items: center;
+        margin-top: 1rem;
+        margin-left: 55px;
+        color: hsl(300, 43%, 22%);
+        background-color:  hsl(300, 24%, 96%);
+        padding: 0.7rem;
+        width: 460px;
+        height: 50px;
+        border-radius: 10px;
+        font-size: 1rem;
+    }
+    
+    .best-tech{
+        font-weight: 700;
+        display: flex;
+        font-family: 'League Spartan';
+        align-items: center;
+        margin-top: 1rem;
+        margin-left: 115px;
+        color: hsl(300, 43%, 22%);
+        background-color:  hsl(300, 24%, 96%);
+        padding: 0.7rem;
+        width: 460px;
+        height: 50px;
+        border-radius: 10px;
+        font-size: 1rem;
+    }
+    
+    .box{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        
+        position: relative;
+        transform: translate(0%, -50%);
+    }
+    
+    .block{
+        background-color: hsl(300, 43%, 22%);
+        width: 23rem;
+        height: 17rem;
+        border-radius: 1rem;
+        margin-top: 1rem;
+        margin-left: 1rem;
+    }
+    
+    .card1{
+        
+    }
+    
+    .card2{
+       margin-top: 50px;
+    }
+    .person{
+        display: flex;
+        padding-left: 2rem;
+        padding-top: 2rem;
+    }
+    
+    .sub{
+        color: hsl(333, 80%, 67%);
+        padding-top: 0.4rem;
+        font-weight: 400;
+    }
+    
+    .name{
+        color: white;
+        font-weight: 700;
+        font-size: 1.2rem;
+        padding-top: 0.4rem;
+        padding-left: 1.4rem;
+    }
+    
+    .photo{
+        border-radius: 50%;
+        width: 3.3rem;
+    }
+    
+    .text{
+        padding-top: 2.3rem;
+        color: white;
+        padding-left: 2rem;
+        padding-right: 1.3rem;
+        font-size: 1.35rem;
+    }
+    
+
+
+
+
+
+
+
+
+
+
+
 }
